--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /database_management/data_assets
 /database_management/DEPRECATED_3_database_verify_genomes_completeness.py
 /database_management/DEPRECATED_5_database_assembly_components.py
+/test_assets
