--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /database/data_assets
 /database/DEPRECATED_3_database_verify_genomes_completeness.py
 /database/DEPRECATED_5_database_assembly_components.py
+/home/katanga/Coding/copperon/tests/test_assets/assembly_summary_genbank.txt
+/home/katanga/Coding/copperon/tests/test_assets/assembly_summary_refseq.txt
